style.css
/* @import url("https://fonts.googleapis.com/css2?family=Itim&display=swap"); */
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Fira+Sans:wght@400;700&display=swap');

:root {
	--dark-1: hsl(0, 0%, 5%);
	--dark-2: hsl(0, 0%, 10%);
	--dark-3: hsl(0, 0%, 15%);
	--dark-4: hsl(0, 0%, 20%);
	--dark-5: hsl(0, 0%, 25%);
	--dark-6: hsl(0, 0%, 30%);
	

	--light-1:hsl(0, 0%, 100%);
	--light-2:hsl(0,0%,85%);
	--light-3:hsl(0, 0%, 90%);
	--light-4:hsl(0,0%,75%);
	--light-5:hsl(0,0%,70%);
	--light-6:hsl(0,0%,65%);

	--orange-1:hsla(39, 100%, 50%, 0.54);
	--orange-2:hsla(39, 100%, 50%, 0.44);
	--orange-3:hsla(39, 100%, 50%, 0.34);
	--orange-4:hsla(39, 100%, 50%, 0.24);
	--orange-5:hsla(39, 100%, 50%, 0.14);
	--orange-6:hsla(39, 93%, 83%, 0.199);

	--green:green;
	--red:rgba(255, 0, 0, 0.822);
	--orange:orange;

	
	--site-bg: var(--light-1);
	--left-panel-bg: var(--orange-6) ;

	--search-cont-bg:transparent;
	--search-cont-input-bg:var(--light-3);
	
	--options-cont-bg:transparent;
	
	--files-cont-bg:transparent;
	--file-bg:transparent;
	--file-hover-bg:var(--orange-5);
	--file-selected-bg:var(--orange-5);
	
	--notepad-cont-bg:var(--light-1);
	--notepad-bg: transparent;
	
	--file-head-cont-bg:transparent;

	--back-btn-bg:var(--green);
	

	--text-color: var(--dark-1);
	--border-color: var(--orange)
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

.material-icons-round  {
	font-size: inherit;
}

body.dark {

	--site-bg: var(--dark-1);
	--left-panel-bg:var(--dark-2);

	--search-cont-input-bg:var(--light-3);


	--file-hover-bg:var(--orange-5);
	--file-selected-bg:var(--orange-5);
	
	--notepad-cont-bg:var(--dark-3);


	--back-btn-bg:var(--green);
	

	--text-color: var(--light-5);
	--border-color: var(--orange-1)
}



body {
	font-family: 'Fira Sans', sans-serif;
	font-size: larger;

	background-color: var(--site-bg);
	
	overflow: hidden;
	color: var(--text-color);
	caret-color: var(--border-color);

	transition: background-color 600ms ease-in-out;
}



/* width */
::-webkit-scrollbar {
	width: 7px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
	background: var(--left-panel-bg);
	border-radius: 5px;
  }
  
  /* Handle */
  ::-webkit-scrollbar-thumb {
	background-color: var(--orange-4);
	border-radius: 5px;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
	background-color: var(--orange-2);
  }





.app-container .left-panel {
	display: none;
}

.app-container .notepad-container {
	display: block;
}

.app-container.left .notepad-container {
	display: none;
}

.app-container.left .left-panel {
	display: block;
}

.app-container {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;

	display: flex;
}


body .app-container::after {
	content: '';
	position: absolute;
	bottom:-50%;
	left: -50%;
	width: 50%;
	height: 50%;
	border-radius: 400px;
	background-color: rgba(0, 0, 0, 1);
	pointer-events: none;

	transition: width .5s ease-in-out, 
				height .5s ease-in-out,
				background-color .5s ease-in-out,
				border-radius .5s ease-in-out;
}

body.dark .app-container::after {
	width: 150%;
	height: 150%;
	border-radius: 1px;
	background-color:rgba(0, 0, 0, 0);
}

.left-panel {
	width: 100%;
	height: 100%;
	/* background-color: var(--left-panel-bg); */
	
	background-color: var(--left-panel-bg);
	transition: background-color 600ms ease-in-out;

	position: relative;
}


body .left-panel::after {
	content: '';
	position: absolute;
	top:-50%;
	left: -50%;
	width: 50%;
	height: 50%;
	border-radius: 400px;
	background-color: rgba(0, 0, 0, 1);
	pointer-events: none;

	transition: width .5s ease-in-out, 
				height .5s ease-in-out,
				background-color .5s ease-in-out,
				border-radius .5s ease-in-out;
}

body.dark .left-panel::after {
	width: 150%;
	height: 150%;
	border-radius: 1px;
	background-color:rgba(0, 0, 0, 0);
}







.search-container {
	width: 100%;
	height: 10%;
	background-color: var(--search-cont-bg);
	padding: 1em 0.5em;
	display: flex;
	align-items: center;
	justify-content: center;
	position: relative;
}


.mode-btn {
	position: absolute;
	font-size: 1.2rem;
	top: 1.5em;
	right: 1.5em;
	transform: translate(50%,-50%);

	font-weight: bold;
	text-transform: uppercase;
	background-color: transparent;
	color: var(--text-color);
	padding: .5rem;
	cursor: pointer;

	transition: color 200ms ease-in-out;
}




.search-container input {
	width: 80%;
	min-width: 200px;
	padding: .5em;
	font-size: 1rem;
	font-weight: 500;
	border:none;
	outline: none;
	background-color: transparent;
	border-bottom: 1px solid var(--border-color);
	color: var(--text-color);
}

.options-container {
	width: 100%;
	height: 10%;

	background-color: var(--options-cont-bg);

	border-width: 1px 0;
	padding: 1em;

}

.options-container button {
	padding: 0.5em;
}

.options-container .add-btn {
	background-color: transparent;
	color: var(--border-color);
	font-weight: bold;
	font-size: 1rem;
	border-radius: 5px;
	transition: background-color 100ms ease;
	cursor: pointer;
}

.options-container .add-btn:hover,
.options-container .add-btn:focus
 {
	background-color: var(--border-color);
	color: var(--site-bg);
}

.files-container {
	overflow-y: auto;
	width: 100%;
	height: 75%;
	background-color: var(--files-cont-bg);
	overflow-y: scroll;
	padding-bottom: 1em;
}

.files-container .file {
	width: 100%;
	min-height: 2rem;
	padding: 0.2em 1em;
	margin-bottom: 1px;
	
	background-color: var(--file-bg);

	position: relative;
	cursor: pointer;

	transition: background-color 100ms ease;
}


.files-container .file p {
	padding: 0.4em;
	font-size: 1.1rem;
	line-height: 2rem;
	vertical-align: top;
	opacity: .8;
	 transition: color 200ms ease;
}

.files-container .file p span {
	font-size: 1rem;
}

.file .delete-btn {
	position: absolute;
	right: 7%;
	top: 50%;
	transform: translateY(-50%);

	padding: .2em;

	font-weight: bold;
	font-size: 1.5rem;

	background-color: transparent;
	color: var(--red) ;
	cursor: pointer;

	transition:color 200ms ease-in-out;
}

.footer {
	width: 100%;
	height: 5%;
	padding: .7em 1em;
	box-shadow: -1px -1px 20px rgba(100, 100, 100, 0.1);

	display: flex;
	flex-direction: column;
	justify-content: center;
	opacity: 0.8;
}

.font-mode {
	font-size: .8rem;
	display: block;
}
.font-mode > span {
	font-size: 1.3em;
	margin-right: .3em;
}

.repo-link {
	font-size: .8rem;
	/* text-align: center; */

}

.switch {
	position: relative;
	display: inline-block;
	width: 2.3em;
	height: 1.3em;
  }
  
  .switch input { 
	opacity: 0;
	width: 0;
	height: 0;
  }
  
  .slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: var(--site-bg);
	-webkit-transition: .4s;
	transition: .4s;
  }
  
  .slider:before {
	position: absolute;
	content: "";
	height: 1em;
	width: 1em;
	left: 0.15em;
	bottom: 0.15em;
	background-color: var(--text-color);
	-webkit-transition: .4s;
	transition: .4s;
  }
  
  input:checked + .slider {
	background-color: var(--orange);
  }
  
  input:focus + .slider {
	box-shadow: 0 0 1px var(--orange);
  }
  
  input:checked + .slider:before {
	-webkit-transform: translateX(1em);
	-ms-transform: translateX(1em);
	transform: translateX(1em);
  }
  
  /* Rounded sliders */
  .slider.round {
	border-radius: 1.3em;
  }
  
  .slider.round:before {
	border-radius: 50%;
  }








.back-btn {
	font-size: 2rem;
	background-color: transparent;
	color: var(--text-color);
	line-height: 1rem;
	margin: 0 2px;
	border-radius: 5px;
	cursor: pointer;

	transition:color 200ms ease-in-out;
}

.back-btn span {
	font-size: inherit;
}

.back-btn:focus {
	border: 1px solid var(--text-color);
}




.notepad-container {
	width: 100%;
	height: auto;
	overflow-y: scroll;
	background-color: var(--notepad-cont-bg);
	transition: background-color 600ms ease-in-out;
	padding: 1em;
}

#save-indicator {
	width: 100%;
	height: 0.2rem;
	background-color: var(--green);
	border-radius: 2px;
	margin-bottom: 0.5em;
}

.file-head-container {
	width: 100%;
	display: flex;
	padding: 0.5em 0;
	margin: 0 0.5em;
	justify-content: space-around;
	border-bottom: 1px solid var(--border-color);
	background-color: var(--file-head-cont-bg);
}

.file-head-container .current-delete-btn {
	padding: .2rem;
	font-size: 1.5rem;
	font-weight: bold;

	background-color: transparent;
	border: none;
	color: var(--red) ;
	cursor: pointer;

	transition:transform 200ms ease-in-out, color 200ms ease-in-out;
}

.file-head-container .current-delete-btn:hover {
	transform: scale(1.2);
}


.file-head-container #filename {
	/* flex-grow: 1; */
	width: 90%;
}

#filename {
	outline: none;
	border: none;
	background-color: transparent;
	font-size: 1.5rem;
	color: var(--orange);
	letter-spacing: 1px;
	font-weight: bold;
	padding: 0.2em 0;
}

#filename:focus,
#filename:hover {
	outline: 1px solid var(--border-color);
}

#notepad {
	font-family:'Fira Sans', sans-serif;;
	width: 98%;
	min-height: 100%;
	overflow: hidden;
	border-radius: 2px;

	display: block;
	font-family: "Itim", cursive;
	font-size: 1.2rem;
	margin-top: 1em;
	padding: 0.5rem;
	background-color: var(--notepad-bg);
	color: var(--text-color);

	resize: none; /* remove resize symmbol */

	outline: none;

	border: none;
	transition: background-color 200ms ease,color 200ms ease-in-out;
}





.center {
	margin: auto;
}

.text-center {
	text-align: center;
}

.remove-btn-style {
	outline: none;
	border: none;
}

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
	.app-container .left-panel {
		display: block;
	}

	.app-container .notepad-container {
		display: block;
	}

	.app-container.left .notepad-container {
		display: block;
	}

	.app-container.left .left-panel {
		display: block;
	}

	.left-panel {
		width: 30%;
		max-width: 350px;
	}

	.notepad-container {
		width: 100%;
	}

	.back-btn {
		display: none;
	}

	.files-container .file:hover {
		background-color: var(--file-hover-bg);
	}

	.files-container .file[data-selected="true"] {
		background-color: var(--file-selected-bg);
	}



	.files-container .file .delete-btn {
		opacity: 0;
		display: none;
	}

	.files-container .file:hover .delete-btn {
		display: block;
		opacity: 1;
	}
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
}

/* X-Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
}

/* XX-Large devices (larger desktops, 1400px and up) */
@media (min-width: 1400px) {
}

